<resources>
    <string name="app_name">TaxiApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="api_key">AIzaSyCgqQfyspQQ-cq-enAKgCQPmVkSb1bcLjM</string>
    <string name="fire">fire</string>
    <string name="cancel">cancel</string>
    <string name="appointment">Appointment</string>
    <string name="calender">Calender</string>
    <string name="rate_per_mile">Rate per Mile</string>
    <string name="switch_units">Switch units</string>
    <string name="_0_00">0.00</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="date">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="pick_time">pick time</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="destination">Destination</string>
    <string name="_00_00">00:00</string>
    <string name="name">Name</string>
    <string name="pickup">Pickup</string>
    <string name="dateFieldTemplate">%d/%d/%d</string>
    <string name="timeFieldTemplate1">0%d:0%d</string>
    <string name="timeFieldTemplate2">0%d:%d</string>
    <string name="timeFieldTemplate3">%d:0%d</string>
    <string name="timeFieldTemplate4">%d:%d</string>
    <string name="parameter">%s</string>
    <string name="kmRateTitle">Rate per KM</string>
    <string name="miRateTitle">Rate per mile</string>
</resources>